# pacwatch

./: Cargo.toml  LICENSE  README.md  categories.default.toml
scripts/: check-coverage.sh
src/: app.rs  categories.rs  main.rs  pacman.rs  ui.rs
