[package]
name = "pacwatch"
version = "0.1.1"
edition = "2021"
authors = ["Raja Dodve"]
description = "A categorized TUI browser for pacman packages"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
toml = "0.8"
dirs = "5"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true
