[package]
name = "pacwatch"
version = "0.9.1"
edition = "2021"
authors = ["Raja Dodve"]
description = "A categorized TUI browser for pacman packages"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
toml_edit = "0.25.12"

[profile.release]
opt-level = 3
lto = true
strip = true
